Fixed index View foreach loop. Fixed bug that caused only dinner dates that had passed to be displayed as upcoming.

--- a/NerdDinner/Views/Dinners/Index.cshtml
+++ b/NerdDinner/Views/Dinners/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model NerdDinner.Models.Dinner
+﻿@model List<NerdDinner.Models.Dinner>
 
 @{
     ViewBag.Title = "Index";
@@ -15,7 +15,7 @@
             on
             @dinner.EventDate.ToShortDateString()
             at
-            @dinner.EventDate.ToShortDateString()
+            @dinner.EventDate.ToShortTimeString()
         </li>
     }
 </ul>
