Added Delete controller and View, Edit controller and view, create controller and view.
Fixed bug with error messages on the edit View.

--- a/NerdDinner/Content/Site.css
+++ b/NerdDinner/Content/Site.css
@@ -22,3 +22,8 @@ select,
 textarea {
     max-width: 280px;
 }
+/*error handling format*/
+.input-validation-error{
+    border: 1px solid #ff0000;
+    background-color: #ffeeee;
+}
