Reworking to use PagedList.MVC

--- a/NerdDinner/Views/Dinners/Index.cshtml
+++ b/NerdDinner/Views/Dinners/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@model List<NerdDinner.Models.Dinner>
-
+@Styles.Render("~/Content/css")
 @{
     ViewBag.Title = "Index";
 }
@@ -18,5 +18,8 @@
             @dinner.EventDate.ToShortTimeString()
         </li>
     }
+
 </ul>
+
+
 
